user authentication done

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -15,15 +15,15 @@
                                         <ion-card-header>
                                                 <ion-card-title>welcome</ion-card-title>
                                             </ion-card-header>
-                                        <ion-label position="floating">username</ion-label>
-                                        <ion-input type="text" id="inputName"></ion-input>
+                                        <ion-label position="floating">Email</ion-label>
+                                        <ion-input type="email" id="user_email"></ion-input>
                                     </ion-item>
                                     <ion-item>
                                         <ion-label position="floating">password</ion-label>
-                                        <ion-input type="password" id="inputAge"></ion-input>
+                                        <ion-input type="password" id="password"></ion-input>
                                     </ion-item>
                                     <ion-button color="secondary" fill="outline"  id="login"> login</ion-button>
-                                        <ion-icon name="close"></ion-icon>
+                                       
                         </ion-card-content>
                     </ion-card>
         </ion-col>
